--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -167,13 +167,15 @@ jobs:
 
       - name: Run unit test
         env:
-          IS_HEAD_SCREENSHOTS_BRANCH_EXISTS: ${{ steps.check-head-screenshots-branch.outputs.exists }}
-          IS_COMPANION_SCREENSHOTS_BRANCH_EXISTS: ${{ steps.check-companion-screenshots-branch.outputs.exists }}
+          HEAD_EXISTS: ${{ steps.check-head-screenshots-branch.outputs.exists }}
+          COMPANION_EXISTS: ${{ steps.check-companion-screenshots-branch.outputs.exists }}
         run: |
-          if [[ "$IS_HEAD_SCREENSHOTS_BRANCH_EXISTS" == "true" && "$IS_COMPANION_SCREENSHOTS_BRANCH_EXISTS" == "true" ]]; then
+          if [[ "$HEAD_EXISTS" == "true" && "$COMPANION_EXISTS" == "true" ]]; then
             ./gradlew testDebugUnitTest
           else
-            ./gradlew testDebugUnitTest -Proborazzi.test.record=true -Proborazzi.test.compare=true -Proborazzi.cleanupOldScreenshots=true
+            ./gradlew testDebugUnitTest \
+              -Proborazzi.test.record=true \
+              -Proborazzi.test.compare=true \ -Proborazzi.cleanupOldScreenshots=true
           fi
 
       - name: Display unit test report
