--- a/.github/workflows/unit-test.yml
+++ b/.github/workflows/unit-test.yml
@@ -207,6 +207,9 @@ jobs:
       head-hash: ${{ steps.get-hash.outputs.head }}
 
     steps:
+      - name: Checkout
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+
       - name: Get base and head files hash
         id: get-hash
         env:
